2004-05-30  Fawad Halim  <fawad@fawad.net>
	* help/: Imported initial docbook docs skeleton
	* xmldocs.make,omf.make: Imported supporting omf/docbook files from GNOME CVS
	* configure.in,Makefile.am: Add help/ in build

2004-05-29  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Changed da_DK to da
	* po/da_DK.po: Moved to da.po
	* po/README: Reflects the move

2004-05-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* po/da_DK.op: Corrected some option/setting translations

2004-05-27  Todd Berman  <tberman@sevenl.net>

	* *: Lots of new files, usable for editing MD within MD.
	Building is not supported, either via the internal build system or
	the generate makefiles, both will most likely break horribly.
	These project files are first draft, and are most likely missing
	references, and other needed info.

2004-05-27  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* po/da_DK.po: Additional translations and corrections
	* src/Main/Base/Internal/Project/Project/AbstractProject.cs: Fixed error msg, 
	SharpDevelop replaced with MonoDevelop

2004-05-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added da_DK
	* po/da_DK.po: Initial creation
	Updated to match latest svn, 
	fixed character encoding,
	more translations.
	* po/README: Added some notes on how to do a l10n.

2004-05-25  Fawad Halim <fawad@fawad.net>

	* CSharpBinding/CSharpBindingCompilerManager.cs: Use
	ProcessStartInfo(filename,arguments) constructor 

2004-05-22  Todd Berman  <tberman@sevenl.net>

	* configure.in: bump some deps and MD itself.

2004-05-21 Iain McCoy <iain@mccoy.id.au>

	* monodevelop.in: make the script more robust in cases where
	mozilla is not installed

2004-05-06  Mike Kestner  <mkestner@ximian.com>

	* configure.in : AC_SUBST the new BASE_DEPENDENCIES_LIBS

2004-05-06  John Luke  <jluke@cfl.rr.com>

	* configure.in: split unmanaged stuff into there own check
	so $(BASE_DEPENDENCIES_LIBS) is useful for us, remove the 
	individual AC_SUBST's