@@ -1,3 +1,8 @@
+2004-05-31  Francisco "Paco" Martinez <paco@mfcon.com>
+
+	* src/Addin/prj2make-sharp-lib/MsPrjHelper.cs -- corrects problems with the
+	import of items flag as content so it will not try to build those
+
 2004-05-30  Fawad Halim  <fawad@fawad.net>
 	* help/: Imported initial docbook docs skeleton
 	* xmldocs.make,omf.make: Imported supporting omf/docbook files from GNOME CVS
